--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yumyum.restaurant">
+    <!-- 위치 정보 엑세스 권한 요청 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
         android:label="restaurant"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <!-- TODO: Add your API key here -->
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCEbUgXXBs8X1zjUVLlzufNu2eU2KqJbbY"/> // android API Key
         <activity
             android:name=".MainActivity"
             android:exported="true"
