--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.17.3 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +37,10 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   flutter_map_location_marker: ^4.1.4
+  geolocator: ^9.0.2
+  flutter_map: ^2.2.0
+  google_maps_flutter: ^2.2.1
+  flutter_fortune_wheel: ^1.2.0
  # flutter_naver_map: ^0.10.5
 
 dev_dependencies:
