--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
  # flutter_naver_map: ^0.10.5
 
 dev_dependencies:
+  cupertino_icons: ^1.0.4
   flutter_test:
     sdk: flutter
 
@@ -59,7 +60,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
