--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_fortune_wheel: ^1.2.0
  # flutter_naver_map: ^0.10.5
   shared_preferences: ^2.0.15
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
