--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,23 +31,25 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
+  # The following adds the Cupertino Icons fonts to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  http: ^0.13.4
+  cupertino_icons: ^1.0.5
+  http: ^0.13.5
   intl: ^0.17.0
-  flutter_map_location_marker: ^4.1.4
+  flutter_map_location_marker: ^5.0.0+1
   geolocator: ^9.0.2
-  flutter_map: ^2.2.0
+  flutter_map: ^3.0.0
   google_maps_flutter: ^2.2.1
   flutter_fortune_wheel: ^1.2.0
  # flutter_naver_map: ^0.10.5
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
 
 
 
 
 dev_dependencies:
-  cupertino_icons: ^1.0.4
+  cupertino_icons: ^1.0.5
   flutter_test:
     sdk: flutter
 
@@ -56,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,7 +67,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-  # The following line ensures that the Material Icons font is
+  # The following line ensures that the Material Icons fonts is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
@@ -83,20 +85,27 @@ flutter:
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
+  # "family" key with the fonts family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the fonts. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Binggrae2
+      fonts:
+        - asset: fonts/Binggrae2/Binggrae2.ttf
+        - asset: fonts/Binggrae2/Binggrae2-Bold.ttf
+          weight: 700
+
+#   fonts:
+#     - family: Schyler
+#       fonts:
+#         - asset: fonts/Schyler-Regular.ttf
+#         - asset: fonts/Schyler-Italic.ttf
+#           style: italic
+#     - family: Trajan Pro
+#       fonts:
+#         - asset: fonts/TrajanPro.ttf
+#         - asset: fonts/TrajanPro_Bold.ttf
+#           weight: 700
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
