--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: restaurant
+name: inmat
 description: 맛집 추천 앱
 
 # The following line prevents the package from being accidentally published to
@@ -37,18 +37,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   http: ^0.13.5
-  intl: ^0.17.0
-  flutter_map_location_marker: ^5.0.0+1
+  intl: ^0.18.0
+  flutter_map_location_marker: ^5.1.0+1
   geolocator: ^9.0.2
-  flutter_map: ^3.0.0
-  google_maps_flutter: ^2.2.1
+  flutter_map: ^3.1.0
+  google_maps_flutter: ^2.2.2
   flutter_fortune_wheel: ^1.2.0
  # flutter_naver_map: ^0.10.5
   shared_preferences: ^2.0.15
-  provider: ^6.0.4
-  fluttertoast: ^8.1.1
+  provider: ^6.0.5
+  fluttertoast: ^8.1.2
 #  change_app_package_name: ^1.1.0
-  device_info_plus: ^3.2.4
+  device_info_plus: ^8.0.0
   ios_utsname_ext: ^2.2.0
   change_app_package_name: ^1.1.0
   google_sign_in: ^5.4.2
@@ -58,7 +58,7 @@ dependencies:
 
 
 dev_dependencies:
-  cupertino_icons: ^1.0.5
+#  cupertino_icons: ^1.0.5
   flutter_test:
     sdk: flutter
 
