android 접근 페이지 만듬 (main 함수 실행)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,11 @@ android {
 //            signingConfig signingConfigs.release
 //        }
     }
+
+    buildFeatures{
+        viewBinding= true
+    }
+
 }
 
 flutter {
@@ -85,4 +90,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.core:core-ktx:1.9.0"
 }
