--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,14 @@
         android:label="restaurant"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
        <!-- TODO: Add your API key here -->
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyCEbUgXXBs8X1zjUVLlzufNu2eU2KqJbbY"/> <!--// android API Key-->
+
+       <activity
+           android:theme="@style/MyCustomTheme"
+           android:name=".SecondActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
