네이버 맵 추가함 MainActivity.kt 안에 뭔가를 적으면 지도가 적용이 안돼서 주석처리함. (안드로이드 method channel 연결 하려면 MainActivity.kt의 주석을 해제 해야한다.)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
        <!-- 네이버 맵 id -->
        <meta-data
            android:name="com.naver.maps.map.CLIENT_ID"
-           android:value="YOUR_CLIENT_ID_HERE" />
+           android:value="ydk44hjjcw" />
 
        <activity
            android:theme="@style/MyCustomTheme"
