--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -23,6 +23,17 @@
     <string>지도 마커를 위해 위치정보를 얻습니다.</string>
     <key>NSLocationAlwaysUsageDescription</key>
     <string>This app needs access to location when in the background.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Always and When In Use Usage</string>
+
+    <!-- 네이버 맵 -->
+    <key>NMFClientId</key>
+    <string>ydk44hjjcw</string>
+    <key>io.flutter.embedded_views_preview</key>
+    <true/>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+
 
 
     <!-- 원래 ios 설정 -->
