--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,14 @@ dependencies:
 
 dev_dependencies:
 #  cupertino_icons: ^1.0.5
+
   flutter_test:
     sdk: flutter
+
+  flutter_driver:
+    sdk: flutter
+  test: any
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
