--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+
+    <key>NSCameraUsageDescription</key>
+    <string>게시글 이미지 업로드를 위해 사용합니다.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>음성 채팅을 위해 사용합니다.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>게시글 이미지 업로드를 위해 사용합니다.</string>
+
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -42,9 +51,9 @@
 	<key>NSAllowsArbitraryLoads</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Always and When In Use Usage</string>
+	<string>지도 마커를 위해 위치정보를 얻습니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app needs access to location when in the background.</string>
+	<string>지도 마커를 위해 위치정보를 얻습니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>지도 마커를 위해 위치정보를 얻습니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
