--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.0+1
-# 버전: pubspec.yaml
+
+version: 0.0.1+2
+# 버전: pubspec.yaml, 내정보 - 공지사항
+# play store 에는 0.0.0 + 1 이 배포되었다
+
 
 
 environment:
@@ -58,6 +61,7 @@ dependencies:
   dartdoc: ^6.1.5
 
   freezed_annotation:
+  image_picker: ^0.8.6
 
 
 
