--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
 
 
 
+
 dev_dependencies:
 #  cupertino_icons: ^1.0.5
 
@@ -78,10 +79,13 @@ dev_dependencies:
   build_runner:
   freezed:
   json_serializable:
+  mockito: ^5.3.2
 
   flutter_driver:
     sdk: flutter
+
   test: any
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
